RESOLVED FIXED 242017
REGRESSION (251244@main): [ iOS ] TestWebKitAPI.HSTS.Preconnect is a flaky timeout
https://bugs.webkit.org/show_bug.cgi?id=242017
Summary REGRESSION (251244@main): [ iOS ] TestWebKitAPI.HSTS.Preconnect is a flaky ti...
Karl Rackler
Reported 2022-06-26 11:12:51 PDT
Description: TestWebKitAPI.HSTS.Preconnect The first failure that I saw on the dashboard was on 6/3/2022 at 251255@main. Relevant files touched at 251244@main are likely to be responsible. This test has been a flaky timeout for its entire history on the dashboard for [ iOS ] iPad Pro (9.7-inch). REPRODUCTION STEPS I can reproduce this on 251840@main ToT. Command: run-api-tests --ipad-simulator --debug --no-build TestWebKitAPI.HSTS.Preconnect Result: Test suite failed Timeout TestWebKitAPI.HSTS.Preconnect History: https://results.webkit.org/?suite=api-tests&test=TestWebKitAPI.HSTS.Preconnect&limit=50000&platform=ios&model=iPad%20Pro%20(9.7-inch)
Attachments
Patch (6.27 KB, patch)
2022-06-29 12:13 PDT, Alex Christensen
no flags
Radar WebKit Bug Importer
Comment 1 2022-06-26 11:13:08 PDT
Karl Rackler
Comment 2 2022-06-28 23:16:12 PDT
I have disabled this test while this issue is investigated.
EWS
Comment 3 2022-06-29 00:11:28 PDT
Test gardening commit 251946@main (3a8b3ba34d64): <https://commits.webkit.org/251946@main> Reviewed commits have been landed. Closing PR #1887 and removing active labels.
Alex Christensen
Comment 4 2022-06-29 12:13:00 PDT
EWS
Comment 5 2022-06-29 15:22:49 PDT
Found 1 new test failure: media/track/track-forced-subtitles-in-band.html
EWS
Comment 6 2022-06-29 16:57:56 PDT
Committed 251970@main (a48990118cc6): <https://commits.webkit.org/251970@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 460550 [details].
Note You need to log in before you can comment on or make changes to this bug.