REGRESSION (251244@main): [ iOS ] TestWebKitAPI.HSTS.Preconnect is a flaky timeout https://bugs.webkit.org/show_bug.cgi?id=242017

Reviewed by Darin Adler.

Sometimes calling loadRequest causes two TCP connections because of the timing of the
TCP connection establishment.  This didn't work well with the test that counted connections.
Instead, do one response, terminate all (probably 1, maybe 2) connections, then make sure
the preconnect connection succeeds.

* Tools/TestWebKitAPI/Tests/WebKitCocoa/HSTS.mm:
(TestWebKitAPI::TEST):
* Tools/TestWebKitAPI/cocoa/HTTPServer.h:
* Tools/TestWebKitAPI/cocoa/HTTPServer.mm:
(TestWebKitAPI::HTTPServer::cancel):
(TestWebKitAPI::HTTPServer::terminateAllConnections):
(TestWebKitAPI::Connection::cancel): Deleted.

Canonical link: https://commits.webkit.org/251970@main